feat: ship viewport speedups and accumulated runtime work
Includes the first-frame iOS keyboard/orientation path, companion 0.1.20, and all other staged workspace changes requested with add all.